--- a/js/package.json
+++ b/js/package.json
@@ -1,16 +1,16 @@
 {
     "devDependencies": {
-        "license-loader": "^0.5.0",
+        "license-loader": "^0.7.0",
         "ts-loader": "^9.1.2",
         "typescript": "^4.4.4",
         "typescript-formatter": "^7.2.2",
         "webpack": "^5",
-        "webpack-cli": "^4.9.2"
+        "webpack-cli": "^6"
     },
     "dependencies": {
-        "libapps": "github:yudai/libapps#release-hterm-1.70",
-        "xterm": "^5.3.0",
-        "xterm-addon-fit": "^0.8.0",
-        "xterm-addon-webgl": "^0.16.0"
+        "@xterm/xterm": "^5.5.0",
+        "@xterm/addon-fit": "^0.10.0",
+        "@xterm/addon-webgl": "^0.18.0",
+        "libapps": "github:yudai/libapps#release-hterm-1.70"
     }
 }
