--- a/js/package.json
+++ b/js/package.json
@@ -8,9 +8,10 @@
         "webpack-cli": "^6"
     },
     "dependencies": {
-        "@xterm/xterm": "^5.5.0",
         "@xterm/addon-fit": "^0.10.0",
+        "@xterm/addon-web-links": "^0.11.0",
         "@xterm/addon-webgl": "^0.18.0",
+        "@xterm/xterm": "^5.5.0",
         "libapps": "github:yudai/libapps#release-hterm-1.70"
     }
 }
